fix: navbar toggle now works on mobile and closes after clicking a link

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ section .container {
 }
 
 .section-offset {
-  scroll-margin-top: 50px;
+  scroll-margin-top: 350px;
 }
 
 
@@ -239,6 +239,10 @@ footer a:hover {
     width: 80%;
     margin: 0.5rem 0;
   }
+}
+
+.navbar-dark .navbar-toggler {
+  border-color: #e0e1dd;
 }
 
 
